--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,8 @@ h2 {
 
 @media (max-width: 768px) {
     .container {
+     background: url('./assets/img/background.jpg') no-repeat center center fixed;
+    background-size: cover;
         display: flex;
         flex-direction: column;
         height: auto;
